# contributor-onboarding-t1

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
resources/github-basics/: index.html
src/: utils.py
tests/: division unittest  test_devide.py  test_modulo.py  test_return_random_number.py  test_sum.py
