[project]
name = "practice-project-t1"
description = "A practice project for open-source development"
authors = [
{ name = "Your Name", email = "your.email@example.com" }
]
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "numpy",
    "scikit-learn",
]

test = [
    "pytest",
    "hypothesis"
]

[project.urls]
repository = "https://github.com/MoAljam/contributor-onboarding-t1"
documentation = "https://MoAljam.github.io/contributor-onboarding-t1/"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
